模拟永久代OOM